--- a/src/app/Returns/mailtype-returns/mailtype-returns.component.css
+++ b/src/app/Returns/mailtype-returns/mailtype-returns.component.css
@@ -1,9 +1,11 @@
-td.details-control, td.mdetails-control, td.cdetails-control, td.pdetails-control {
-    background: url('../../resources/details_open.png') no-repeat center center;
+td.mdetails-control {
+    background: url('../../resources/plus-solid.svg') no-repeat center center;
     cursor: pointer;
+    font-size:10pt;
 }
-tr.shown td.details-control,tr.shown td.mdetails-control,tr.shown td.cdetails-control,tr.shown td.pdetails-control {
-    background: url('../../resources/details_close.png') no-repeat center center;
+tr.shown td.mdetails-control {
+    background: url('../../resources/minus-solid.svg') no-repeat center center;
+    font-size:10pt;
 }
 
 .mailTypeTable{
@@ -28,4 +30,8 @@ tr.shown td.details-control,tr.shown td.mdetails-control,tr.shown td.cdetails-co
 thead.mailTypeTableHeader th{
     border:none;
 
+}
+
+td{
+    font-size:9pt;
 }
