--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -30,8 +30,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class='btnCol details-control'>
-      </td>
+      <td class="test btnCol details-control"></td>
       <td>{{ RootReturns?.Client | uppercase }}</td>
       <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
       <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
