<Tyler> major structural changes to the returns datatable columns and styles

--- a/src/app/Returns/maillist-returns/maillist-returns.component.css
+++ b/src/app/Returns/maillist-returns/maillist-returns.component.css
@@ -2,6 +2,26 @@ a{
     text-decoration: underline;
 }
 
-td{
+td, th{
     font-size:9pt;
 }
+
+.maillistTable{
+    width:100%;
+}
+
+.mailcodeColumn{
+    width:90px;
+    text-align:right;
+}
+
+.listTypeColumn{
+    width:35px;
+    text-align:center; 
+}
+
+.tableSmallColumns{
+    width:60px;
+    text-align:center;
+}
+
