--- a/src/app/Returns/main-returns/main-returns.component.css
+++ b/src/app/Returns/main-returns/main-returns.component.css
@@ -10,12 +10,18 @@
 
 td.details-control {
     background: url('../../resources/plus-solid.svg') no-repeat center center;
+    background-color: green;
+    border-radius: 5px;
+    color:white;
     cursor: pointer;
     font-size:10pt;
 }
 
 tr.shown td.details-control {
     background: url('../../resources/minus-solid.svg') no-repeat center center;
+    background-color: red;
+    border-radius: 5px;
+    color:white;
     font-size:10pt;
 }
 
@@ -28,6 +34,16 @@ tr.shown td.details-control {
      margin: 0 auto;
 }
 
-td{
+td, th{
     font-size:9pt;
+}
+
+.tableSmallColumns{
+    width:60px;
+    text-align:center !important;
+}
+
+.clientColumn{
+    width:90px;
+    text-align:right;
 }
