--- a/src/app/Returns/campaign-returns/campaign-returns.component.css
+++ b/src/app/Returns/campaign-returns/campaign-returns.component.css
@@ -1,11 +1,21 @@
 td.cdetails-control {
     background: url('../../resources/plus-solid.svg') no-repeat center center;
+    background-color: green;
+    border-radius: 5px;
+    color:white;
     cursor: pointer;
     font-size:10pt;
 }
 tr.shown td.cdetails-control {
     background: url('../../resources/minus-solid.svg') no-repeat center center;
+    background-color: red;
+    border-radius: 5px;
+    color:white;
     font-size:10pt;
+}
+
+.campaignTable{
+    width:100%;
 }
 
 /*Handles visibility of parent row when a detail row of the datatable is expanded*/
@@ -13,6 +23,16 @@ tr.shown td.cdetails-control {
     visibility: collapse;
 }
 
-td{
+td, th{
     font-size:9pt;
+}
+
+.tableSmallColumns{
+    width:60px;
+    text-align:center !important;
+}
+
+.campaignColumn{
+    width:90px;
+    text-align:right;
 }
