--- a/src/app/Returns/campaign-returns/campaign-returns.component.html
+++ b/src/app/Returns/campaign-returns/campaign-returns.component.html
@@ -1,9 +1,10 @@
 <div class="campaigndiv">
-  <table class="campaignTable" cellspacing="0" width="100%">
+  <table class="campaignTable" cellspacing="0">
     <thead class='campaignTableHeader' style='text-decoration: underline;'>
       <tr>
         <th></th>
         <th>Campaign</th>
+        <th></th>
         <th>Mailed</th>
         <th>Caged</th>
         <th>Quantity</th>
@@ -25,6 +26,7 @@
       <tr *ngFor="let campaign of CampaignList">
         <td class='btnCol cdetails-control'></td>
         <td>{{ campaign?.CampaignName }}</td>
+        <td></td>
         <td>{{ campaign?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
         <td>{{ campaign?.Measure.Caged | date: 'MM/dd/yy' }}</td>
         <td>{{ campaign?.Measure.Quantity | number : '1.0-0' }}</td>
@@ -44,6 +46,7 @@
     </tbody>
     <tfoot class='mailTypeTableFooter'>
       <tr>
+        <td></td>
         <td colspan="2">TOTAL {{ MailType?.MailType | uppercase }}</td>
         <td>{{ MailType?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
         <td>{{ MailType?.Measure.Caged | date: 'MM/dd/yy' }}</td>
