--- a/src/app/Returns/phase-returns/phase-returns.component.html
+++ b/src/app/Returns/phase-returns/phase-returns.component.html
@@ -1,9 +1,10 @@
 <div class="phasediv">
-  <table class="phaseTable" cellspacing="0" width="100%">
+  <table class="phaseTable" cellspacing="0">
     <thead class='phaseTableHeader' style='text-decoration: underline;'>
       <tr>
         <th></th>
         <th>Phase</th>
+        <th></th>
         <th>Mailed</th>
         <th>Caged</th>
         <th>Quantity</th>
@@ -25,6 +26,7 @@
       <tr *ngFor="let phase of PhaseList">
         <td class='btnCol pdetails-control'></td>
         <td>{{ phase?.PhaseName }}</td>
+        <td></td>
         <td>{{ phase?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
         <td>{{ phase?.Measure.Caged | date: 'MM/dd/yy' }}</td>
         <td>{{ phase?.Measure.Quantity | number : '1.0-0' }}</td>
@@ -44,6 +46,7 @@
     </tbody>
     <tfoot class='campaignTableFooter'>
       <tr>
+        <td></td>
         <td colspan="2">TOTAL {{ Campaign?.CampaignName | uppercase }}</td>
         <td>{{ Campaign?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
         <td>{{ Campaign?.Measure.Caged | date: 'MM/dd/yy' }}</td>
