--- a/src/app/Returns/maillist-returns/maillist-returns.component.css
+++ b/src/app/Returns/maillist-returns/maillist-returns.component.css
@@ -1,7 +1,3 @@
-a{
-    text-decoration: underline;
-}
-
 td, th{
     font-size:9pt;
 }
@@ -10,18 +6,64 @@ td, th{
     width:100%;
 }
 
+.maillistTableHeader{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/*NOTE ON COLUMN WIDTHS*/
+/*For tables, min-width works, but use just width instead of max-width*/
+.buttonColumn{
+   width:25px;
+   min-width:25px;
+}
 .mailcodeColumn{
     width:90px;
+    min-width:90px;
     text-align:right;
 }
-
-.listTypeColumn{
-    width:35px;
-    text-align:center; 
+.code-desc-buffer{
+    min-width:10px;
+    width:10px;
 }
-
+.descriptionColumn{
+    min-width:175px;
+    width:425px
+}
 .tableSmallColumns{
-    width:60px;
+    min-width:55px;
     text-align:center;
 }
 
+.RphaseHeaderBox{
+    text-align:right;
+}
+
+.phaseTableFooter{
+    font-weight:bold;
+    border-top: 1px solid #333;
+}
+
+/*works*/
+/* .phaseTableFooter > tr > td:last-child{
+    padding-bottom:40px;
+} */
+
+/*works*/
+/* .maillistTable{
+    margin-bottom:40px;
+} */
+
+
+
+/* .maillistTable:last-child{
+    margin-bottom:0px;
+} */
+
+.phaseHeaderRow{
+    margin-bottom:20px;
+}
+
+.phaseTotalFooterIndicator{
+    text-align:center;
+}
