--- a/src/app/Returns/mailtype-returns/mailtype-returns.component.css
+++ b/src/app/Returns/mailtype-returns/mailtype-returns.component.css
@@ -1,12 +1,14 @@
-td.mdetails-control {
+div.mdetails-control {
     background: url('../../resources/plus-solid.svg') no-repeat center center;
     background-color: green;
     border-radius: 5px;
     color:white;
     cursor: pointer;
     font-size:10pt;
+    width:20px;
+    height:20px;
 }
-tr.shown td.mdetails-control {
+tr.shown td div.mdetails-control {
     background: url('../../resources/minus-solid.svg') no-repeat center center;
     background-color: red;
     border-radius: 5px;
@@ -42,12 +44,23 @@ td, th{
     font-size:9pt;
 }
 
-.tableSmallColumns{
-    width:60px;
-    text-align:center !important;
-}
-
-.mailTypeColumn{
+/*NOTE ON COLUMN WIDTHS*/
+/*For tables, min-width works, but use just width instead of max-width*/
+.buttonColumn{
+    width:25px;
+    min-width:25px;
+ }
+ .mailTypeColumn{
     width:90px;
+    min-width:90px;
     text-align:right;
 }
+.descriptionColumn{
+    min-width:185px; /*Added 10px compared to list level due to missing code-desc-buffer column*/
+    width:425px
+}
+.tableSmallColumns{
+    min-width:55px;
+    text-align:center;
+}
+
