--- a/src/app/Returns/phase-returns/phase-returns.component.css
+++ b/src/app/Returns/phase-returns/phase-returns.component.css
@@ -1,12 +1,14 @@
-td.pdetails-control {
+div.pdetails-control {
     background: url('../../resources/plus-solid.svg') no-repeat center center;
     background-color: green;
     border-radius: 5px;
     color:white;
     cursor: pointer;
     font-size:10pt;
+    width:20px;
+    height:20px;
 }
-tr.shown td.pdetails-control {
+tr.shown td div.pdetails-control {
     background: url('../../resources/minus-solid.svg') no-repeat center center;
     background-color: red;
     border-radius: 5px;
@@ -16,6 +18,7 @@ tr.shown td.pdetails-control {
 
 .phaseTable{
     width:100%;
+    padding:0;
 }
 
 /*Handles visibility of parent row when a detail row of the datatable is expanded*/
@@ -25,14 +28,38 @@ tr.shown td.pdetails-control {
 
 td, th{
     font-size:9pt;
+    padding:0;
 }
 
-.tableSmallColumns{
-    width:60px;
-    text-align:center !important;
-}
-
-.phaseColumn{
+/*NOTE ON COLUMN WIDTHS*/
+/*For tables, min-width works, but use just width instead of max-width*/
+.buttonColumn{
+    width:25px;
+    min-width:25px;
+ }
+ .phaseColumn{
     width:90px;
+    min-width:90px;
     text-align:right;
+}
+.code-desc-buffer{
+    min-width:10px;
+    width:10px;
+}
+.descriptionColumn{
+    min-width:185px; /*Added 10px compared to list level due to missing code-desc-buffer column*/
+    width:425px
+}
+.tableSmallColumns{
+    min-width:55px;
+    text-align:center;
+}
+
+
+.campaignTableFooter{
+    font-weight:bold;
+    border-top: 1px solid #333;
+}
+.campaignTotalFooterIndicator{
+    text-align:center;
 }
