--- a/src/app/Returns/Subviews/list-performance/list-performance.component.html
+++ b/src/app/Returns/Subviews/list-performance/list-performance.component.html
@@ -1,13 +1,23 @@
-<div *ngIf="DataReady">
-  <table class="table listperformance" style="margin-top: 100px;">
-    <thead>
+<div id="page" style="margin-top:50px">
+<table style="width:100%">
+  <tr>
+    <td *ngIf="ListOwner > 0">List Onwer: {{ ListPerformanceArr[0].ListOwnerName }}</td>
+  </tr>
+  <tr>
+    <td *ngIf="ListManager > 0">List Manager: {{ ListPerformanceArr[0].ListManagerName }}</td>
+  </tr>
+  <tr>
+    <td *ngIf="Recency > 0">Recency: {{ ListPerformanceArr[0].Recency }}</td>
+  </tr>
+</table>
+<br>
+<table id="listperformance" class="display" [hidden]="!DataReady" style="width:100%">
+  <thead>
+    <tr>
       <th>Client</th>
       <th>Package</th>
       <th>Mail Code</th>
       <th>Description</th>
-      <!-- <th>ListOwner</th>
-    <th>ListManager</th> 
-    <th>Recency</th> -->
       <th>Flag</th>
       <th>Mailed</th>
       <th>Caged</th>
@@ -25,34 +35,32 @@
       <th>NLM</th>
       <th>IO</th>
       <th>Package</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let list of ListPerformanceArr">
-        <td> {{ list.Client }} </td>
-        <td> {{ list.Phase }} </td>
-        <td> {{ list.MailCode }} </td>
-        <td> {{ list.Description }} </td>
-        <!-- <td> {{ list.ListOwnerName }} </td>
-      <td> {{ list.ListManagerName }} </td> 
-      <td> {{ list.Recency }} </td> -->
-        <td> {{ list.ExchangeFlag }} </td>
-        <td>{{ list.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-        <td>{{ list.Measure.Caged | date: 'MM/dd/yy' }}</td>
-        <td>{{ list.Measure.Quantity | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.Donors | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.NonDonors | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.NewDonors | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.RSP | percent:'1.2-2'}}</td>
-        <td>{{ list.Measure.AVG | number : '1.0-2' }}</td>
-        <td>{{ list.Measure.Gross | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.Cost | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.Net | number : '1.0-0' }}</td>
-        <td>{{ list.Measure.GPP | number : '1.0-2' }}</td>
-        <td>{{ list.Measure.CLM | number : '1.0-2' }}</td>
-        <td>{{ list.Measure.NLM | number : '1.0-2' }}</td>
-        <td>{{ list.Measure.IO | number : '1.0-2' }}</td>
-        <td>{{ list.AvgPackageIO | number : '1.0-2' }} </td>
-      </tr>
-    </tbody>
-  </table>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let list of ListPerformanceArr">
+      <td> {{ list?.Client }} </td>
+      <td> {{ list?.Phase }} </td>
+      <td> {{ list?.MailCode }} </td>
+      <td> {{ list.Description }} </td>
+      <td> {{ list.ExchangeFlag }} </td>
+      <td>{{ list.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+      <td>{{ list.Measure.Caged | date: 'MM/dd/yy' }}</td>
+      <td>{{ list.Measure.Quantity | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.Donors | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.NonDonors | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.NewDonors | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.RSP | percent:'1.2-2'}}</td>
+      <td>{{ list.Measure.AVG | number : '1.0-2' }}</td>
+      <td>{{ list.Measure.Gross | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.Cost | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.Net | number : '1.0-0' }}</td>
+      <td>{{ list.Measure.GPP | number : '1.0-2' }}</td>
+      <td>{{ list.Measure.CLM | number : '1.0-2' }}</td>
+      <td>{{ list.Measure.NLM | number : '1.0-2' }}</td>
+      <td>{{ list.Measure.IO | number : '1.0-2' }}</td>
+      <td>{{ list.AvgPackageIO | number : '1.0-2' }} </td>
+    </tr>
+  </tbody>
+</table>
 </div>
