--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -52,7 +52,7 @@
     </tr>
   </tbody>
 </table>
-<div style="visibility: collapse">
+<!-- <div style="visibility: collapse"> -->
   <div>
     <app-mailtype-returns [RootReturns]="RootReturns" [MailTypeList]="RootReturns?.MailTypeList" title="{{ RootReturns?.Client }}"></app-mailtype-returns>
     <div *ngFor="let mailType of RootReturns.MailTypeList">
@@ -65,4 +65,4 @@
       </ng-container>
     </div>
   </div>
-</div>
+<!-- </div> -->
