--- a/src/app/internal-home-dashboard/internal-home-dashboard.component.html
+++ b/src/app/internal-home-dashboard/internal-home-dashboard.component.html
@@ -94,8 +94,8 @@
     <div id="dictionaryHeader">
 
         <div class="btn-group">
-            <button type="button" class="btn btn-primary" (click)="GetArchived('2018')">Live</button>
-            <button type="button" class="btn btn-primary" (click)="GetArchived('ALL')">Archived</button>
+            <button type="button" class="btn btn-primary" (click)="GetArchivedAndReset('2018')">Live</button>
+            <button type="button" class="btn btn-primary" (click)="GetArchivedAndReset('ALL')">Archived</button>
             <div class="btn-group dropdown">
               <button type="button" id="ByYearId" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                  By Year
