--- a/src/app/internal-home-dashboard/internal-home-dashboard.component.html
+++ b/src/app/internal-home-dashboard/internal-home-dashboard.component.html
@@ -165,6 +165,6 @@
 
 <div class='dictionaryContent'>
 <ul class='dictionary'>
-    <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}'>{{ client?.gClientName }}</a></li>
+    <li *ngFor="let client of ClientArr" class="clientNameLI"><a routerLink='/returns/{{client?.gClientAcronym}}/{{ selectedYear }}'>{{ client?.gClientName }}</a></li>
 </ul>
 </div>
